<resources>
    <string name="app_name">QuantumApp</string>
    <string name="title">Quantum App</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="site">quantumapp.ufrpe.br</string>
    <string name="menu_circuit">Circuit</string>
    <string name="sub_menu_circuit_editor">Editor de Circuitos</string>
    <string name="menu_quantum">Computação Quântica</string>
    <string name="sub_menu_history">História</string>
    <string name="sub_menu_fundamentals">Fundamentos</string>
    <string name="menu_operators">Operadores</string>
    <string name="sub_menu_hadamard">Hadamard</string>
    <string name="sub_menu_pauli_matrix">Pauli Matrix</string>
    <string name="sub_menu_pauli_y">Pauli-Y</string>
    <string name="sub_menu_pauli_z">Pauli-Z</string>
    <string name="sub_menu_phase">Phase</string>
    <string name="sub_menu_pi_8">π/8 ou T</string>
    <string name="sub_menu_controlled_not">Controlled-NOT</string>
    <string name="sub_menu_controlled_z">Controlled-Z</string>
    <string name="sub_menu_controlled_phase">Controlled-Phase</string>
    <string name="sub_menu_swap">Swap</string>
    <string name="menu_about">Sobre</string>
    <string name="sub_menu_about_app">App</string>
    <string name="sub_menu_about_team">Equipe</string>
    <string name="temp_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="quantum_computating_history_text">
        O conceito de computador quântico teve inicio quando, em 1982, Feynman propôs
        que sistemas quânticos não seriam eficientemente modelados em sistemas clássicos,
        pois estes só poderiam ser modelados eficientemente por outro sistema quântico.\n

        Deutsch propôs em 1985 um modelo para computação quântica universal,
        seria o correspondente a Máquina de Turing(MT) para computação clássica,
        este modelo adicionava algumas características à MT, as quais permitia a
        representação de sobreposições.\n

        Porém o modelo inicialmente proposto era bastante complexo, assim Deutsch
        criou uma representação mais simples para a computação quântica que era semelhante
        ao modelo de circuitos clássicos. Por serem de fácil compreensão os circuitos
        quânticos vêm sendo cada vez mais utilizados.\n

        Entretanto em 1994, quando Shor publicou seu algoritmo quântico para fatoração de
        números inteiros grandes é que a computação quântica despertou interesse geral,
        pois a fatoração é a base para os atuais sistemas de criptografia. O algoritmo de
        Shor resolve o problema de fatoração de primos em tempo polinomial, enquanto
        a solução clássica só é obtida em tempo exponencial.\n

        A principal técnica utilizada para aumentar a velocidade dos computadores
        clássicos é a miniaturização de circuitos, o que torna possível a utilização de
        números cada vez maiores de circuitos nos processadores.\n

        Mas devido ao limite de De Broglie, que diz que os atuais circuitos poderão
        progredir até o tamanho de 20 nanômetros sem sacrifício funcional, após este
        limite os elétrons deixam de agir como partículas e passam a agir como ondas,
        quando obedecem então as leis da física quântica.\n

        Os computadores quânticos não serão apenas mais velozes que as máquinas
        atuais, eles tornarão possível uma nova forma de computação. Os circuitos
        quânticos fornecem uma forma simples para que se possa compreender o
        funcionamento de computadores quânticos.

    </string>
    <string name="quantum_computating_fundamentals_text_paragraph_1">
        O estudo e entendimento de circuitos quânticos envolve basicamente o conhecimento de
        operações com Matrizes e álgebra linear.\n\n

        MATRIZES\n\n


        Uma matriz é uma tabela onde os elementos estão dispostos em linhas e colunas.
        Toda matriz é indicada por uma letra maiúscula do alfabeto latino e pode ser
        representada em geral utilizando-se parênteses ( ) ou colchetes [ ].\n
    </string>
    <string name="quantum_computating_fundamentals_text_paragraph_2">
        A ordem de uma matriz representa o número de linhas e colunas desta, assim
        se temos A m×n , A é dita uma matriz de ordem m por n.\n
        Duas matrizes A e B quaisquer só podem ser iguais se e somente se possuírem
        a mesma ordem e todos seus elementos correspondentes forem iguais.\n
        Existem diversos tipos especiais de matrizes, destacam-se como os mais importantes
        tipos na área de Computação Quântica, as matrizes descritas abaixo:\n

    </string>
    <string name="quantum_computating_fundamentals_text_square_matrix">
        Matriz quadrada - toda aquela que possui um número de linhas e colunas igual.

    </string>
    <string name="quantum_computating_fundamentals_text_column_matrix">
        Matriz coluna - toda aquela que possui apenas uma coluna.

    </string>
    <string name="quantum_computating_fundamentals_text_row_matrix">
        Matriz linha - toda aquela quando possui apenas uma linha.

    </string>
    <string name="quantum_computating_fundamentals_text_transposed_matrix">
        Matriz transposta - obtida transformando as linhas em colunas e as colunas
        em linhas.

    </string>
    <string name="quantum_computating_fundamentals_text_identity_matrix">
        Matriz identidade - é uma matriz quadrada onde todos os elementos da
        diagonal principal são iguais a um e todos os outros iguais a zero.

    </string>
    <string name="quantum_computating_fundamentals_text_addition_subtraction">
        \n\nAdição e subtração de matrizes\n

        Para que duas matrizes A e B quaisquer possam ser adicionadas ou subtraídas,
        é necessário que estas tenham o mesmo número de linhas e colunas, isto é, sejam da mesma ordem.

    </string>
    <string name="quantum_computating_fundamentals_text_multiplication_matrix">
        \n\nMultiplicação de matrizes\n

        Para que duas matrizes A e B quaisquer possam ser multiplicadas é necessário
        que o número de colunas de A seja igual ao número de linhas de B, ou seja A m×n
        só pode ser multiplicada por B p×q se n=p.\n
        Seja C a matriz resultante da multiplicação da matriz A 2×3 pela matriz B 3×2,
        então C será uma matriz 2×2.

    </string>
    <string name="quantum_computating_fundamentals_text_linear_algebra_1">
        \n\nÁlgebra Linear\n
        Para compreender diversos aspectos da computação quântica é bastante desejável
        o conhecimento de conceitos básicos da álgebra linear, os conceitos necessários
        para compreensão de circuitos quânticos são apresentados a seguir.

        Um vetor pode ser representado como um segmento de reta orientado em um
        plano ou espaço. As componentes do vetor podem ainda ser definidas utilizando
        um sistema de coordenadas cartesianas. Segue a representação gráfica de um vetor no R2
        sendo (2, 3) a representação do ponto final do vetor e a origem (0, 0) o ponto
        inicial do mesmo.\n

    </string>
    <string name="quantum_computating_fundamentals_text_linear_algebra_2">
        Um vetor pode também ser representado por uma matriz linha ou coluna.
    </string>
    <string name="quantum_computating_fundamentals_text_internal_product">
        \n\nProduto interno ou escalar\n
        O produto interno entre dois vetores é representado por ".", assim se temos dois
        vetores quaisquer:
    </string>
    <string name="quantum_computating_fundamentals_text_external_product">
        \n\nProduto externo ou vetorial\n
        O produto externo entre dois vetores é representado por "×", assim se temos dois
        vetores quaisquer:
    </string>
    <string name="quantum_computating_fundamentals_text_tensor_product">
        \n\nProduto tensorial\n
        O produto tensorial entre dois vetores quaisquer é obitido por:
    </string>
    <string name="quantum_computating_fundamentals_text_dirac_notation_1">
        \n\nNotação de Dirac\n
        Na computação quântica é comumente utilizada a notação de Dirac para representar
        estados quânticos, essa notação é utilizada devido a praticidade de representar
        estados quânticos e transformações. Na literatura a notação de
        Dirac pode também ser encontrada como notação braket, devido a sua forma de
        representação de vetores.\n

        Representação de um vetor na notação de Dirac (lê-se "ket vê"):
    </string>
    <string name="quantum_computating_fundamentals_text_dirac_notation_2">
        Nesta notação tem-se ainda o vetor representado na forma transposto conjugado (lê-se "bra vê"):
    </string>
    <string name="quantum_computating_fundamentals_text_dirac_notation_3">
        Pode-se representar as operações vetoriais adição, subtração e multiplicação por escalar
        como se segue:
    </string>
    <string name="quantum_computating_fundamentals_text_dirac_notation_4">
        O produto tensorial entre dois vetores também é apresentado na notação de Dirac:
    </string>
    <string name="quantum_computating_fundamentals_text_qubits_1">
        \n\nBits quânticos\n
        Para a computação clássica o conceito fundamental é o bit, para a computação
        quântica o conceito análogo é o bit quântico. As referências aos bits quânticos
        freqüentemente são realizadas de maneira abreviada QuBit ou ainda q-bit.\n
        Um bit clássico possui apenas dois estados possíveis, que são representados
        por 0 ou 1, q-bits possuem como possíveis estados os vetores 0 e 1 , que podem
        ser ditos equivalentes aos estados clássicos 0 e 1 e representados como:
    </string>
    <string name="quantum_computating_fundamentals_text_qubits_2">
        Porém um q-bit pode estar em um estado chamado superposição, onde este é
        uma combinação linear de estados.\n
        Veja um q-bit genérico abaixo, onde α e β são números complexos,
        ψ é denominado superposição de estados.
        Um q-bit pode ser definido matematicamente como um vetor unitário no
        espaço dos números complexos . Os vetores 0 e 1 são denominados base computacional,
        pois qualquer outro vetor pode ser criado através de uma combinação linear destes.
    </string>
    <string name="quantum_computating_fundamentals_text_quantum_ports_1">
        \nPortas Quânticas\n
        Nos computadores clássicos o processamento da informação ocorre através de
        circuitos lógicos que são agrupamentos de portas lógicas as quais executam
        operações sobre bits.\n

        Para os circuitos clássicos cinco portas lógicas são os principais blocos construtores,
        tais portas obedecem a álgebra booleana e podem ter suas entradas e saídas
        descritas em tabelas verdade.
    </string>
    <string name="phase_text_paragraph_1">
       A porta Phase é representada no circuito pela letra S.
        Seu símbolo no circuito e a sua matriz podem ser vistos abaixo.
    </string>
    <string name="phase_text_paragraph_2">
       Ao ser aplicada a porta Phase em um q-bit genérico obtém-se o resultado abaixo.
    </string>
    <string name="pi_8_text_paragraph_1">
        A porta π/8 é representada no circuito pela letra T.
        Seu símbolo no circuito e a sua matriz podem ser vistos abaixo.
    </string>
    <string name="pi_8_text_paragraph_2">
        Ao ser aplicada a porta Phase em um q-bit genérico obtém-se o resultado abaixo.
    </string>
</resources>