<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewPi8Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sub_menu_pi_8"
        style="@style/textViewHeaderStyle"/>

    <ScrollView
        android:layout_below="@+id/textViewPi8Title"
        style="@style/scrollViewDefaultStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPi8Text"
                android:text="@string/pi_8_text_paragraph_1"
                style="@style/textViewContentStyle" />

            <ImageView
                android:id="@+id/imageView8"
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_operator_pi_8" />

            <ImageView
                android:id="@+id/imageView9"
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_matriz_pi_oito" />

            <TextView
                android:text="@string/pi_8_text_paragraph_2"
                style="@style/textViewContentStyle" />

            <ImageView
                style="@style/imageViewDefaultStyle"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_generic_qubit" />

            <ImageView
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_example_pi8" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
