<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitleFase"
        android:layout_alignParentTop="true"
        android:text="@string/sub_menu_phase"
        style="@style/textViewHeaderStyle" />

    <ScrollView
        android:layout_below="@+id/textViewTitleFase"
        style="@style/scrollViewDefaultStyle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/phase_text_paragraph_1"
                style="@style/textViewContentStyle" />


            <ImageView
                android:id="@+id/imageView7"
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_operator_phase" />

            <ImageView
                android:id="@+id/imageView6"
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_matriz_phase" />

            <TextView
                android:text="@string/phase_text_paragraph_2"
                style="@style/textViewContentStyle" />

            <ImageView
                style="@style/imageViewDefaultStyle"
                app:srcCompat="@drawable/ic_generic_qubit"
                android:layout_height="30dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/imageViewDefaultStyle"
                        android:layout_width="700dp"
                        app:srcCompat="@drawable/ic_example_phase_matrix" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
